frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qubejudge-frontend
spec:
  selector:
    app: qubejudge-frontend
  ports:
  - port: 3000
    name: qubejudge-frontend
    targetPort: 3000
