mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    name: mysql
    targetPort: 3306
