ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: qubejudge
              port: 
                number: 8081
